# RCS_Project

./: CMakeLists.txt  Recordings link.txt  package.xml
scripts/: Area_definition_and_movement.py  Area_definition_and_movement.pyZone.Identifier  Area_definition_and_movement_RAW.py  obstacle_avoidance.py
